added all remaining days

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # Ignore node_modules folder
 node_modules/
-day2/
-day3/
-day4/
-day5/
-day6/
-day7/
+# day2/
+# day3/
+# day4/
+# day5/
+# day6/
+# day7/
 
 # Ignore logs
 logs/
